# drive_mirror

./: .driveignore  .gitignore  README.md  drive  main.py  pyproject.toml  sync.py
drive_mirror/: __init__.py  auth.py  cli.py  commands.py  constants.py  errors.py  ignore.py  local.py  metadata.py  models.py  output.py  remote.py
